[gd_scene load_steps=4 format=2]

[ext_resource path="res://Comet.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Comet" parent="." instance=ExtResource( 1 )]
position = Vector2( 803.904, 271.139 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[connection signal="build" from="." to="Comet" method="_on_Main_build"]
[connection signal="explode_stations" from="." to="Comet" method="_on_Main_explode_stations"]
[connection signal="update_display" from="." to="HUD" method="_on_Main_update_display"]
[connection signal="update_display" from="Comet" to="." method="_on_Comet_update_display"]
[connection signal="build" from="HUD" to="." method="_on_HUD_build"]
[connection signal="game_over_lose" from="HUD" to="." method="_on_HUD_game_over_lose"]
